# rmf_api_msgs

./: .gitignore  README.md
.github/workflows/: asan.yaml  build.yaml
.internal_tools/: Cargo.toml  README.md
.internal_tools/check_schemas/: Cargo.toml
rmf_api_msgs/: CHANGELOG.rst  CMakeLists.txt  package.json  package.xml  setup.cfg  setup.py
rmf_api_msgs/cmake/: rmf_api_generate_schema_headers.cmake
rmf_api_msgs/samples/task_log/: multi_dropoff_delivery.json
rmf_api_msgs/samples/task_state/: multi_dropoff_delivery.json
rmf_api_msgs/schemas/: activity_discovery_request.json  activity_discovery_response.json  activity_discovery_update.schema.json  cancel_task_request.json  cancel_task_request.schema.json  cancel_task_response.json  cancel_task_response.schema.json  commission.json  compose_task_description.json  compose_task_description.schema.json  dispatch_task_request.json  dispatch_task_response.json  error.json  estimate_robot_task_request.json  estimate_robot_task_response.json  fleet_log.json  fleet_log.schema.json  fleet_log_request.json  fleet_log_request.schema.json  fleet_log_response.json  fleet_log_response.schema.json  fleet_log_update.json  fleet_log_update.schema.json  fleet_state.json  fleet_state.schema.json  fleet_state_update.json  fleet_state_update.schema.json  interrupt_task_request.json  interrupt_task_response.json  kill_task_request.json  kill_task_request.schema.json  kill_task_response.json  kill_task_response.schema.json  location_2D.schema.json  log_entry.json  log_entry.schema.json  refresh_request.schema.json  request.schema.json  rest_request.schema.json  resume_task_request.json  (+59 more)
rmf_api_msgs/scripts/: check_sample.py  generate_py_schemas.py  schemas_template.jinja2
rmf_task_scheduler_msgs/: CMakeLists.txt  package.xml
rmf_task_scheduler_msgs/msg/: TaskScheduleRequest.msg  TaskScheduleResponse.msg  (+2 more)
(+2 files in other folders)
