<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_api_msgs</name>
  <version>0.0.1</version>
  <description>RMF API msgs definition</description>
  <maintainer email="youling@openrobotics.org">You Liang</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>ament_index_python</exec_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <!-- <exec_depend>python3-json</exec_depend> -->
  <!-- TODO json validation test script -->

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
