<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rmf_api_msgs</name>
  <version>0.0.1</version>
  <description>RMF API msgs definition</description>
  <maintainer email="grey@openrobotics.org">Grey</maintainer>
  <maintainer email="youliang@openrobotics.org">You Liang</maintainer>
  <license>Apache License 2.0</license>

  <depend>nlohmann-json3-dev</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
